# INSITU_ANALYSIS

./: README.md
NEK5K1901/: nek5k1901.sh
NEK5K1901/EXAMPLES/OCYL00_1/: mpmd.py  nek_in_situ.f  ocyl.rea  paakat.f  pipe.py
NEK5K1901/EXAMPLES/OCYL01_3/: .state  ocyl01_3.beskow  ocyl01_3.mac
NEK5K1901/EXAMPLES/OCYL02_1/: ocyl02_1.docker
PAAKAT/EXAMPLES/CXX/E03_OCYL/: CMakeLists.txt  e03_ocyl.docker  filter.hpp  getIncludeAndLibs.py  getzeros.hpp  insitu.hpp  makefile.dummy  nek5k01_01.beskow  nek5k01_01.f90  nek5k01_01.nord  pipeline.cxx  pipeline.hpp  vtktools.hpp  wrapper.cxx
PAAKAT/EXAMPLES/CXX/SIMPLEST/: CMakeLists.txt  makefile.dummy  simplest.beskow  simplest.juwels  simplest.nord  simplest.tegner
PAAKAT/EXAMPLES/PY/MPMD02_1/: CMakeLists.txt  dummy.cxx  dummy.f90  getIncludeAndLibs.py  insitu_py.hpp  makefile.dummy  plepp.f90  sources.sh  vtktools.hpp  wrapper.cxx
PAAKAT/EXAMPLES/PY/SIMPLEST/: CMakeLists.txt  makefile.dummy  simplest.beskow  simplest.mac
PAAKAT/EXAMPLES/PY/TRACKING/VtkCollisionDetectionFilter/: README.md
PAAKAT/EXAMPLES/PY/TRACKING/VtkCollisionDetectionFilter/SRCs/: CMakeLists.txt  RUNNER.mac  test.py
PAAKAT/LIBPLEPP/: CMakeLists.txt  notes.txt
PAAKAT/LIBPLEPP/Tests/DUMMY/: CMakeLists.txt  dummy.cxx  dummy.f90  makefile.dummy
PAAKAT/LIBPLEPP/include/: commdom.hpp  outside_ple.h  plepp.hpp  plepp.hpp_2020MAR30
PAAKAT/LIBPLEPP/src/: build_octree.c  commdom.cpp  commdom_wrapper.cpp  ple_locator.c  plepp_wrapper.cpp  plepp_wrapper.cpp_2020MAY08
PAAKAT/LIBPLEPP/wrappers/Cpp/: explorer.cxx
PAAKAT/LIBPLEPP/wrappers/Fortran/: test01_1.f90  test02_1.f90
PAAKAT/PATCHES/NEK5K/V1901/PY/core/: comm_mpi.f
PAAKAT/SRCs/: apply_patch.py  insitu_cpp.hpp  insitu_py.hpp  notes.txt  vtktools.hpp
PAAKAT/SRCs/E01_SIMPLEST/: insitu.hpp  pipeline.cxx  pipeline.hpp  simplest.hpp  test.cxx  wrapper.cxx
PAAKAT/SRCs/E02_SIMPLEST/: insitu.hpp  pipeline.cxx  pipeline.hpp  wrapper.cxx
PAAKAT/SRCs/E04_P4EST11/: vtktools.hpp  vtktools_basics.hpp  wrapper.cxx
